fix(payment): PAYMENTS-11661 Use spacing instead of hardcoded px value

--- a/packages/core/src/scss/components/foundation/forms/_forms.scss
+++ b/packages/core/src/scss/components/foundation/forms/_forms.scss
@@ -29,7 +29,7 @@
     }
 
     .form-fieldset--storedInstrument,.form-fieldset--creditCardFieldset {
-        margin-bottom: 10px;
+        margin-bottom: spacing("half");
     }
 
     #checkoutShippingAddress.form-fieldset:has(.floating-form-field) {
